--- a/src/main/resources/Fxml/ListProducts.fxml
+++ b/src/main/resources/Fxml/ListProducts.fxml
@@ -15,117 +15,126 @@
 <?import javafx.scene.text.Font?>
 
 <?import javafx.scene.layout.GridPane?>
+
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="729.0" prefWidth="1214.0" style="-fx-background-color: #2F2B43;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.ProductController">
     <children>
-      <VBox layoutX="10.0" layoutY="10.0" prefHeight="90.0" prefWidth="1388.0" style="-fx-background-color: #393351;">
-         <children>
-            <HBox alignment="CENTER_LEFT" prefHeight="86.0" prefWidth="1394.0" style="-fx-background-color: #1F1D2B;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
-               <children>
-                  <ImageView fitHeight="50.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../resources/icons8_Home_32px.png" />
-                     </image>
-                     <HBox.margin>
-                        <Insets left="10.0" right="5.0" />
-                     </HBox.margin>
-                  </ImageView>
-                  <Label graphicTextGap="7.0" text="TRASKEL" textFill="WHITE">
-                     <font>
-                        <Font name="System Bold" size="25.0" />
-                     </font>
-                     <HBox.margin>
-                        <Insets left="7.0" />
-                     </HBox.margin>
-                  </Label>
-                  <Label graphicTextGap="7.0" text="Home" textFill="WHITE">
-                     <font>
-                        <Font name="System Bold" size="22.0" />
-                     </font>
-                     <HBox.margin>
-                        <Insets left="200.0" />
-                     </HBox.margin>
-                  </Label>
-                  <Label graphicTextGap="7.0" text="Shop" textFill="WHITE">
-                     <font>
-                        <Font name="System Bold" size="22.0" />
-                     </font>
-                     <HBox.margin>
-                        <Insets left="30.0" />
-                     </HBox.margin>
-                  </Label>
-                  <Label graphicTextGap="7.0" text="Services" textFill="WHITE">
-                     <font>
-                        <Font name="System Bold" size="22.0" />
-                     </font>
-                     <HBox.margin>
-                        <Insets left="30.0" />
-                     </HBox.margin>
-                  </Label>
-                  <Label graphicTextGap="7.0" text="Contact Us" textFill="WHITE">
-                     <font>
-                        <Font name="System Bold" size="22.0" />
-                     </font>
-                     <HBox.margin>
-                        <Insets left="30.0" />
-                     </HBox.margin>
-                  </Label>
-                  <ImageView fitHeight="31.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../resources/icons8_Person_32px.png" />
-                     </image>
-                     <HBox.margin>
-                        <Insets left="150.0" />
-                     </HBox.margin>
-                  </ImageView>
-                  <ImageView fitHeight="31.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../resources/icons8_Person_32px.png" />
-                     </image>
-                     <HBox.margin>
-                        <Insets left="20.0" />
-                     </HBox.margin>
-                  </ImageView>
-               </children>
+        <VBox layoutX="10.0" layoutY="10.0" prefHeight="90.0" prefWidth="1388.0" style="-fx-background-color: #393351;">
+            <children>
+                <HBox alignment="CENTER_LEFT" prefHeight="86.0" prefWidth="1394.0" style="-fx-background-color: #1F1D2B;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+                    <children>
+                        <ImageView fitHeight="50.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+                            <image>
+                                <Image url="@../resources/icons8_Home_32px.png" />
+                            </image>
+                            <HBox.margin>
+                                <Insets left="10.0" right="5.0" />
+                            </HBox.margin>
+                        </ImageView>
+                        <Label graphicTextGap="7.0" text="TRASKEL" textFill="WHITE">
+                            <font>
+                                <Font name="System Bold" size="25.0" />
+                            </font>
+                            <HBox.margin>
+                                <Insets left="7.0" />
+                            </HBox.margin>
+                        </Label>
+                        <Label graphicTextGap="7.0" text="Home" textFill="WHITE">
+                            <font>
+                                <Font name="System Bold" size="22.0" />
+                            </font>
+                            <HBox.margin>
+                                <Insets left="200.0" />
+                            </HBox.margin>
+                        </Label>
+                        <Label graphicTextGap="7.0" text="Shop" textFill="WHITE">
+                            <font>
+                                <Font name="System Bold" size="22.0" />
+                            </font>
+                            <HBox.margin>
+                                <Insets left="30.0" />
+                            </HBox.margin>
+                        </Label>
+                        <Label graphicTextGap="7.0" text="Services" textFill="WHITE">
+                            <font>
+                                <Font name="System Bold" size="22.0" />
+                            </font>
+                            <HBox.margin>
+                                <Insets left="30.0" />
+                            </HBox.margin>
+                        </Label>
+                        <Label graphicTextGap="7.0" text="Contact Us" textFill="WHITE">
+                            <font>
+                                <Font name="System Bold" size="22.0" />
+                            </font>
+                            <HBox.margin>
+                                <Insets left="30.0" />
+                            </HBox.margin>
+                        </Label>
+                        <ImageView fitHeight="31.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
+                            <image>
+                                <Image url="@../resources/icons8_Person_32px.png" />
+                            </image>
+                            <HBox.margin>
+                                <Insets left="150.0" />
+                            </HBox.margin>
+                        </ImageView>
+                        <ImageView fitHeight="31.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
+                            <image>
+                                <Image url="@../resources/icons8_Person_32px.png" />
+                            </image>
+                            <HBox.margin>
+                                <Insets left="20.0" />
+                            </HBox.margin>
+                        </ImageView>
+                    </children>
+                </HBox>
+
+                <Pane prefHeight="5.0" prefWidth="1388.0" />
+            </children>
+        </VBox>
+
+        <Pane layoutX="154.0" layoutY="164.0" prefHeight="519.0" prefWidth="491.0" stylesheets="@../css/styless.css">
+            <children>
+                <AnchorPane prefHeight="519.0" prefWidth="562.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+                    <GridPane fx:id="gridPane" hgap="70" layoutX="79.0" layoutY="108.0" prefHeight="200.0" prefWidth="821.0" vgap="10">
+                    </GridPane>
+
+                </AnchorPane>
+            </children>
+            <HBox alignment="CENTER_RIGHT" prefHeight="65.0" prefWidth="400.0" stylesheets="@../css/styless.css" VBox.vgrow="NEVER">
+                <VBox.margin>
+                    <Insets left="30.0" right="30.0" />
+                </VBox.margin>
+                <children>
+                    <Button fx:id="searchButton" mnemonicParsing="false" onAction="#handleSearch" prefHeight="40.0" prefWidth="100.0" styleClass="search-button" stylesheets="@../css/styless.css" text="Search" textFill="WHITE" />
+                    <TextField fx:id="searchTextField" prefHeight="40.0" prefWidth="235.0" promptText="Type here to search" styleClass="transparent" stylesheets="@../css/styless.css">
+                        <HBox.margin>
+                            <Insets right="20.0" />
+                        </HBox.margin>
+                        <font>
+                            <Font name="Cambria" size="18.0" />
+                        </font>
+                    </TextField>
+                </children>
+                <styleClass>
+                    <String fx:value="search-box" />
+                    <String fx:value="shadow" />
+                </styleClass>
             </HBox>
-             
-            
-                    <Pane prefHeight="5.0" prefWidth="1388.0" />
-         </children>
-      </VBox>
 
-                <Pane layoutX="154.0" layoutY="164.0" prefHeight="519.0" prefWidth="491.0" stylesheets="@../css/styless.css">
-              <children>
-                  <AnchorPane prefHeight="519.0" prefWidth="562.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
-                      <GridPane fx:id="gridPane" hgap="70" layoutX="79.0" layoutY="108.0" prefHeight="200.0" prefWidth="821.0" vgap="10">
-                      </GridPane>
+        </Pane>
+        <Pane layoutX="-346.0" layoutY="68.0" prefHeight="303.0" prefWidth="467.0" rotate="41.6" style="-fx-background-color: #FA2C56; -fx-background-radius: 70;" />
+        <ComboBox fx:id="categoryComboBox" layoutX="818.0" layoutY="164.0" prefHeight="60.0" prefWidth="200.0" promptText="Tous les catégories" style="-fx-background-color: white;">
 
-                  </AnchorPane>
-              </children>
-              <HBox alignment="CENTER_RIGHT" prefHeight="65.0" prefWidth="400.0" stylesheets="@../css/styless.css" VBox.vgrow="NEVER">
-                  <VBox.margin>
-                      <Insets left="30.0" right="30.0" />
-                  </VBox.margin>
-                  <children>
-                      <Button fx:id="searchButton" mnemonicParsing="false" onAction="#handleSearch" prefHeight="40.0" prefWidth="100.0" styleClass="search-button" stylesheets="@../css/styless.css" text="Search" textFill="WHITE" />
-                      <TextField fx:id="searchTextField" prefHeight="40.0" prefWidth="235.0" promptText="Type here to search" styleClass="transparent" stylesheets="@../css/styless.css">
-                          <HBox.margin>
-                              <Insets right="20.0" />
-                          </HBox.margin>
-                          <font>
-                              <Font name="Cambria" size="18.0" />
-                          </font>
-                      </TextField>
-                  </children>
-                  <styleClass>
-                      <String fx:value="search-box" />
-                      <String fx:value="shadow" />
-                  </styleClass>
-              </HBox>
+        </ComboBox>
 
-                </Pane>
-      <Pane layoutX="-346.0" layoutY="68.0" prefHeight="303.0" prefWidth="467.0" rotate="41.6" style="-fx-background-color: #FA2C56; -fx-background-radius: 70;" />
-          <ComboBox fx:id="categoryComboBox" layoutX="818.0" layoutY="164.0" prefHeight="60.0" prefWidth="200.0" promptText="Tous les catégories" style="-fx-background-color: white;">
-
-                </ComboBox>
+        <!-- Pagination -->
+        <HBox alignment="CENTER" layoutX="154.0" layoutY="700.0" prefHeight="50.0" prefWidth="491.0" stylesheets="@../css/styless.css">
+            <children>
+                <Button fx:id="prevPageButton" mnemonicParsing="false" onAction="#goToPreviousPage" text="Previous" />
+                <Label fx:id="currentPageLabel" text="" />
+                <Button fx:id="nextPageButton" mnemonicParsing="false" onAction="#goToNextPage" text="Next" />
+            </children>
+        </HBox>
     </children>
 </AnchorPane>
