--- a/src/main/resources/Fxml/DashListProducts.fxml
+++ b/src/main/resources/Fxml/DashListProducts.fxml
@@ -19,6 +19,7 @@
 
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.control.ScrollPane?>
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="576.0" prefWidth="1050.0" style="-fx-background-color: #02030A;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.dashProductController">
     <children>
         <VBox alignment="TOP_CENTER" prefHeight="576.0" prefWidth="256.0" style="-fx-background-color: #05071F;" AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -122,19 +123,21 @@
                 <Pane fx:id="pnlMenus" prefHeight="200.0" prefWidth="200.0" />
                 <Pane fx:id="pnlOverview" prefHeight="554.0" prefWidth="793.0">
                     <children>
-                        <TextField layoutX="666.0" layoutY="29.0" prefHeight="27.0" prefWidth="183.0" promptText="search" style="-fx-background-color: #02030A; -fx-border-color: #B7C3D7; -fx-border-radius: 2em;" />
-                        <Label layoutX="57.0" layoutY="25.0" styleClass="title" stylesheets="@../css/DashStyle.css" text="Liste des catégories" textFill="WHITE">
+
+                        <Label layoutX="57.0" layoutY="25.0" styleClass="title" stylesheets="@../css/DashStyle.css" text="Liste des produits" textFill="WHITE">
                             <font>
                                 <Font name="System Bold" size="24.0" />
                             </font>
                         </Label>
-                        <Pane layoutX="262.0" prefHeight="649.0" prefWidth="631.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="262.0" AnchorPane.rightAnchor="-4.0" AnchorPane.topAnchor="0.0">
+
+                        <ScrollPane layoutX="104.0" layoutY="144.0" prefHeight="590.0" prefWidth="1100.0" stylesheets="@../css/styless.css">
+                        <Pane layoutX="102.0" prefHeight="1049.0" prefWidth="631.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="262.0" AnchorPane.rightAnchor="-4.0" AnchorPane.topAnchor="0.0">
                             <children>
-                                <Pane layoutX="76.0" layoutY="106.0">
+                                <Pane layoutX="76.0" layoutY="16.0">
 
                                     <children>
                                         <AnchorPane layoutX="-14.0" layoutY="8.0" prefHeight="519.0" prefWidth="562.0" AnchorPane.bottomAnchor="-8.0" AnchorPane.leftAnchor="-14.0" AnchorPane.topAnchor="8.0">
-                                            <GridPane fx:id="gridPane" hgap="70" layoutX="-28.0" layoutY="110.0" prefHeight="200.0" prefWidth="821.0" vgap="10">
+                                            <GridPane fx:id="gridPane" hgap="70" layoutX="28.0" layoutY="110.0" prefHeight="200.0" prefWidth="201.0" vgap="10">
                                             </GridPane>
                                         </AnchorPane>
                                     </children>
@@ -142,12 +145,7 @@
                                 </Pane>
                             </children>
                         </Pane>
-
-                        <ImageView fitHeight="17.0" fitWidth="16.0" layoutX="812.0" layoutY="35.0" pickOnBounds="true" preserveRatio="true">
-                            <image>
-                                <Image url="@../resources/icons8_Search_52px.png" />
-                            </image>
-                        </ImageView>
+                        </ScrollPane>
                     </children>
                 </Pane>
             </children>
