--- a/src/main/resources/Fxml/DetailsProd.fxml
+++ b/src/main/resources/Fxml/DetailsProd.fxml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="649.0" prefWidth="1087.0" style="-fx-background-color: #2F2B43;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.DetailsProdController">
+
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="649.0" prefWidth="1087.0" style="-fx-background-color: #f5f5f8;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.DetailsProdController">
     <children>
                   <VBox fx:id="chosenFruitCard" alignment="CENTER" layoutX="281.0" layoutY="56.0" prefHeight="535.0" prefWidth="650.0" stylesheets="@../css/styless.css">
                       <children>
@@ -41,14 +44,18 @@
                                   <Insets top="30.0" />
                               </VBox.margin>
                           </ImageView>
-                          <Label fx:id="description" prefHeight="66.0" prefWidth="434.0" text="Description" textFill="WHITE">
-                              <VBox.margin>
-                                  <Insets bottom="20.0" left="40.0" right="40.0" top="40.0" />
-                              </VBox.margin>
-               <font>
-                  <Font size="19.0" />
-               </font>
-                          </Label>
+            <ScrollPane prefHeight="250.0" prefWidth="570.0">
+               <VBox.margin>
+                  <Insets bottom="10.0" left="40.0" right="40.0" top="40.0" />
+               </VBox.margin>
+               <content>
+                                <Label fx:id="description" contentDisplay="CENTER" mouseTransparent="true" prefHeight="170.0" prefWidth="543.0" text="Description" textAlignment="JUSTIFY" wrapText="true">
+                     <font>
+                        <Font size="19.0" />
+                     </font>
+                                </Label>
+               </content>
+            </ScrollPane>
                           <HBox alignment="CENTER" prefHeight="53.0" prefWidth="335.0">
                               <VBox.margin>
                                   <Insets top="20.0" />
@@ -57,7 +64,7 @@
                           <HBox alignment="CENTER" prefHeight="53.0" prefWidth="335.0" />
                           <Button fx:id="addCard" mnemonicParsing="false" prefHeight="50.0" prefWidth="270.0" styleClass="add-btn" stylesheets="@../css/styless.css" text="Ajouter au panier" textFill="#828282">
                               <VBox.margin>
-                                  <Insets bottom="20.0" top="30.0" />
+                                  <Insets bottom="20.0" top="10.0" />
                               </VBox.margin>
                               <font>
                                   <Font name="System Bold" size="18.0" />
