--- a/src/main/resources/Fxml/ListProducts.fxml
+++ b/src/main/resources/Fxml/ListProducts.fxml
@@ -9,13 +9,13 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.layout.GridPane?>
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="729.0" prefWidth="1214.0" style="-fx-background-color: #F4F4F4;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.ProductController">
     <children>
         <VBox layoutY="-9.0" prefHeight="98.0" prefWidth="2160.0" style="-fx-background-color: #252525;">
@@ -80,7 +80,7 @@
                         </ImageView>
                         <ImageView fitHeight="31.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
                             <image>
-                                <Image url="@../resources/icons8-heart-50.png"/>
+                                <Image url="@../resources/icons8-heart-50.png" />
                             </image>
                             <HBox.margin>
                                 <Insets left="110.0" />
@@ -105,7 +105,7 @@
                     <Insets left="30.0" right="30.0" />
                 </VBox.margin>
                 <children>
-                    <Button fx:id="searchButton" mnemonicParsing="false" onAction="#handleSearch" prefHeight="40.0" prefWidth="100.0" styleClass="search-button" stylesheets="@../css/styless.css" text="Search" textFill="#59c46e"/>
+                    <Button fx:id="searchButton" mnemonicParsing="false" onAction="#handleSearch" prefHeight="40.0" prefWidth="100.0" styleClass="search-button" stylesheets="@../css/styless.css" text="Search" textFill="#59c46e" />
                     <TextField fx:id="searchTextField" prefHeight="40.0" prefWidth="235.0" promptText="Type here to search" styleClass="transparent" stylesheets="@../css/styless.css">
                         <HBox.margin>
                             <Insets right="20.0" />
@@ -122,14 +122,25 @@
             </HBox>
            <ComboBox fx:id="categoryComboBox" layoutX="1200.0" layoutY="67.0" prefHeight="60.0" prefWidth="200.0" promptText="Tous les catégories">
         </ComboBox>
+           <TextField fx:id="minPriceTextField" layoutX="822.0" layoutY="95.0" />
+   
+           <!-- Champ de texte pour le prix maximum -->
+           <Label layoutX="443.0" layoutY="98.0" text="Prix maximum:" />
+           <TextField fx:id="maxPriceTextField" layoutX="548.0" layoutY="95.0" />
+           <Label layoutX="718.0" layoutY="99.0" text="Prix minimum:" />
+            <Button layoutX="1022.0" layoutY="94.0" onAction="#handleSearch" text="Filtrer" GridPane.columnIndex="4" GridPane.rowIndex="1" />
         </Pane>
+
+
+
+
         <Pane layoutX="-346.0" layoutY="398.0" prefHeight="303.0" prefWidth="467.0" rotate="41.6" style="-fx-background-color: #365929; -fx-background-radius: 70;" />
         <!-- Pagination -->
         <HBox alignment="CENTER" layoutX="1172.0" layoutY="728.0" prefHeight="50.0" prefWidth="133.0">
             <children>
-                <Button fx:id="prevPageButton" mnemonicParsing="false" onAction="#goToPreviousPage" text="Previous" style="-fx-background-color:#365920; -fx-text-fill: white;" />
-                <Label fx:id="currentPageLabel" text=  "  "/>
-                <Button fx:id="nextPageButton" mnemonicParsing="false" onAction="#goToNextPage" text="Next" style="-fx-background-color:#365920; -fx-text-fill: white;" />
+                <Button fx:id="prevPageButton" mnemonicParsing="false" onAction="#goToPreviousPage" style="-fx-background-color:#365920; -fx-text-fill: white;" text="Previous" />
+                <Label fx:id="currentPageLabel" text="  " />
+                <Button fx:id="nextPageButton" mnemonicParsing="false" onAction="#goToNextPage" style="-fx-background-color:#365920; -fx-text-fill: white;" text="Next" />
             </children>
         </HBox>
     </children>
