--- a/src/main/resources/inscription.fxml
+++ b/src/main/resources/inscription.fxml
@@ -17,7 +17,7 @@
    <children>
       <ImageView fitHeight="480.0" fitWidth="647.0">
          <image>
-            <Image url="@../resources/hh.jpg" />
+            <Image url="@resources/hh.jpg" />
          </image>
       </ImageView>
       <Label layoutX="86.0" layoutY="81.0" text="Cin" />
@@ -36,7 +36,7 @@
       <Label fx:id="passwordStrengthLabel" layoutX="195.0" layoutY="321.0" prefHeight="18.0" prefWidth="282.0" />
       <CheckBox fx:id="show" layoutX="354.0" layoutY="299.0" mnemonicParsing="false" text="Voir mot de passe" />
       <Button fx:id="btn_inscri" layoutX="208.0" layoutY="380.0" mnemonicParsing="false" onAction="#savePerson" style="-fx-background-color: #FF6100;" text="S'inscrire" />
-      <RadioButton fx:id="rbproprietaire" layoutX="275.0" layoutY="340.0" mnemonicParsing="false" text="Propriétaire de salle" />
+      <RadioButton fx:id="rbproprietaire" layoutX="275.0" layoutY="340.0" mnemonicParsing="false" text="Livreur" />
       <RadioButton fx:id="rbmembre" layoutX="199.0" layoutY="340.0" mnemonicParsing="false" text="Membre" />
       <Label layoutX="88.0" layoutY="340.0" text="Role" />
       <Button fx:id="btn_annul" layoutX="279.0" layoutY="380.0" mnemonicParsing="false" onAction="#annuler" style="-fx-background-color: #FF6100;" text="Annuler" />
